--- a/landingPage.html
+++ b/landingPage.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <header id="header"><img id="header-img" src="https://cdn.discordapp.com/attachments/362343703794155520/718928893465067571/GackerMan.jpg"/><nav id="nav-bar"></nav></header>
+    <header id="header">
+        <img id="header-img" 
+        src="https://cdn.discordapp.com/attachments/362343703794155520/718928893465067571/GackerMan.jpg"/>
+        <div id="nav-bar">
+        <nav id="nav-bar">
+        <div>
+        <a href="#" target="_blank" class="nav-link">link</a>
+        </div>
+        <div id="link2"><a href="#" target="_blank" class="nav-link"> link2</a>
+        </div><a href="#" target="_blank" class="nav-link"> link3</a>
+        </div>
+        </nav>
+        </div>
+    </header>
     <body>
+        <iframe width="500" height="320" src="https://www.youtube.com/watch?v=frp4vfciLbA" id="video">
 
     </body>
 </html>
