add not working email input

--- a/landingPage.html
+++ b/landingPage.html
@@ -16,6 +16,9 @@
     </header>
     <body>
         <iframe width="500" height="320" src="https://www.youtube.com/watch?v=frp4vfciLbA" id="video">
-
+        <form id="form">
+            <label for="email">Enter your email:</label>
+            <input type="email" id="email" name="email" placeholder="Email"> 
+        </form>
     </body>
 </html>
