add not working submit

--- a/landingPage.html
+++ b/landingPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <head></head>
     <header id="header">
         <img id="header-img" 
         src="https://cdn.discordapp.com/attachments/362343703794155520/718928893465067571/GackerMan.jpg"/>
@@ -17,8 +18,14 @@
     <body>
         <iframe width="500" height="320" src="https://www.youtube.com/watch?v=frp4vfciLbA" id="video">
         <form id="form">
+            <div id="email">
             <label for="email">Enter your email:</label>
             <input type="email" id="email" name="email" placeholder="Email"> 
+            </div>
+            <div>
+            <label for="submit">Submit</label>
+            <input type="submit" id="submit" name="submit">
+            </div>
         </form>
     </body>
 </html>
