finish .html ans start .css

--- a/landingPage.html
+++ b/landingPage.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <header id="header">
-        <img id="header-img" 
-        src="https://cdn.discordapp.com/attachments/362343703794155520/718928893465067571/GackerMan.jpg"/>
-        <div id="nav-bar">
-        <nav id="nav-bar">
-        <div>
-        <a href="#" target="_blank" class="nav-link">link</a>
-        </div>
-        <div id="link2"><a href="#" target="_blank" class="nav-link"> link2</a>
-        </div><a href="#" target="_blank" class="nav-link"> link3</a>
-        </div>
-        </nav>
-        </div>
-    </header>
+    <head>
+        <link rel="stylesheet" href="landingStyle.css">
+        <title>Landing Page</title>
+    </head>
     <body>
-        <iframe width="500" height="320" src="https://www.youtube.com/watch?v=frp4vfciLbA" id="video">
-        <form id="form">
-            <div id="email">
+        <header id="header">
+            <img id="header-img" 
+            src="https://cdn.discordapp.com/attachments/362343703794155520/718928893465067571/GackerMan.jpg"/>
+            <nav id="nav-bar">
+                <a href="#" target="_blank" class="nav-link">link1</a>
+                <a href="#" target="_blank" class="nav-link"> link2</a>
+                <a href="#" target="_blank" class="nav-link"> link3</a>
+            </nav>
+        </header>
+        <iframe width="500" height="320" src="https://www.youtube.com/watch?v=frp4vfciLbA" id="video" controls></iframe>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
             <label for="email">Enter your email:</label>
-            <input type="email" id="email" name="email" placeholder="Email"> 
-            </div>
-            <div>
+            <input type="email" id="email" name="email" placeholder="email">
+            
             <label for="submit">Submit</label>
             <input type="submit" id="submit" name="submit">
-            </div>
         </form>
     </body>
 </html>
